<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/mainLayout">

    <TextView
        android:text="@string/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcome"
        android:layout_alignParentTop="true"
        android:gravity="top|center_vertical|bottom|center_horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_alignRight="@+id/loggedInText"
        android:layout_alignEnd="@+id/loggedInText"
        android:minHeight="40dp"
        android:textIsSelectable="true"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="false"
        android:elegantTextHeight="false"
        android:textSize="50dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/button_login"
        android:onClick="buttonLogin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textWelcome"
        android:id="@+id/loggedInText"
        android:layout_below="@+id/welcome"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="25dp"
        android:gravity="center_horizontal" />

</RelativeLayout>
